@@ -2,6 +2,7 @@
  * CHANGELOG.
  */
 
+03132005 - More mount work, added PHYSFS_getMountPoint() and more cleanups.
 03122005 - Added evil GOTO_*_MACRO_* macros. Fixed unix.c to compile again on
            MacOS X. Added PHYSFS_mount() (thanks, Philip!). Cleaned up the
            INSTALL and CREDITS files a little. Split off start of
